# subtitle-tools

./: README.md  combine.py  pyproject.toml  requirements.txt  translate.py
test_data/: s1e5.vtt
tests/: test_components.py
